use useMemo in TodoList component

--- a/src/app/@main/TodoPage.module.css
+++ b/src/app/@main/TodoPage.module.css
@@ -1,3 +1,7 @@
 .todoMain {
   padding: var(--mantine-spacing-md) 0;
 }
+
+.todoDivider {
+  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-3));
+}
